# ia4s_db_manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  handoff-ia4s-db-manager.md  pyproject.toml
docs/briefs/: handoff-2026-05-22-eod.md  token-usage-dashboard.md
docs/superpowers/plans/: 2026-05-21-multi-user-auth.md  2026-05-21-postgres-database-manager.md  2026-05-21-ui-followups.md  2026-05-22-lazy-load-and-pool.md  2026-05-22-multi-server-support.md  2026-05-22-server-ux-improvements.md  2026-05-22-theme-admin.md
docs/superpowers/specs/: 2026-05-21-multi-user-auth-design.md  2026-05-21-postgres-database-manager-design.md  2026-05-21-ui-followups-design.md  2026-05-22-lazy-load-and-pool-design.md  2026-05-22-multi-server-support-design.md  2026-05-22-server-ux-improvements-design.md  2026-05-22-theme-admin-design.md
src/dbmanager/: auth.py  authdb.py  cli.py  config.py  crypto.py  db.py  deps.py  inspect.py  passwords.py  pools.py  serverdb.py  settings_store.py  sqlbuild.py  themes.py  webapp.py
src/dbmanager/routes/: databases.py  query.py  rows.py  servers.py  session.py  tables.py  theme.py  users.py
tests/: conftest.py  test_auth.py  test_authdb.py  test_authenticate.py  test_config.py  test_crypto.py  test_databases.py  test_db.py  test_init_auth.py  test_init_servers.py  test_passwords.py  test_pools.py  test_query.py  test_rows.py  test_serverdb.py  test_servers.py  test_session.py  test_settings_store.py  test_sqlbuild.py  test_tables.py  test_theme_routes.py  test_themes.py  test_users.py  test_webapp.py
(+11 files in other folders)
