[project]
name = "dbmanager"
version = "0.1.0"
description = "Postgres Database Manager — web app for full CRUD over a Postgres server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "itsdangerous>=2.0",
    "click>=8.1",
    "bcrypt>=4.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-postgresql>=6.0",
    "httpx>=0.27",
]

[project.scripts]
dbmanager = "dbmanager.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dbmanager = ["web/*.html", "web/*.css", "web/*.js"]
